--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               }
             ],
             "styles": [
+              "src/assets/theme/base.scss",
               "src/assets/theme/global.scss",
               "src/assets/theme/variables.scss"
             ],
