--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
@@ -20,7 +20,7 @@
     "module": "es2020",
     "lib": ["es2018", "dom"],
     "useDefineForClassFields": false,
-     "paths": {
+    "paths": {
       "@environment/*":["src/environments/*"],
       "@model/*":["src/core/model/*"],
       "@service/*":["src/core/service/*"],
@@ -32,7 +32,6 @@
       "@util/*":["src/core/util/*"],
       "@core/*":["src/core/*"],
       "@pages/*":["src/app/pages/*"],
-      "@widget-map/*":["src/shared/components/widget-map/*"],
       "@shared/*":["src/shared/*"],
     }
   },
