--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "apexcharts": "^5.3.5",
     "ionicons": "^7.0.0",
+    "ng-apexcharts": "^2.0.3",
+    "ng-zorro-antd": "^20.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
