--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
     "@ionic/angular": "^8.0.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
     "apexcharts": "^5.3.5",
+    "i18n": "^0.15.3",
     "ionicons": "^7.0.0",
     "ng-apexcharts": "^2.0.3",
+    "ng-persian-datepicker": "^10.0.0",
     "ng-zorro-antd": "^20.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
