--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ng-persian-datepicker": "^10.0.0",
     "ng-zorro-antd": "^20.4.0",
     "rxjs": "~7.8.0",
+    "swiper": "^12.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
